# parque_nacional_tierra_del_fuego_y_el_turismo_en_la_provincia

./: LICENSE  Makefile  README.md  pyproject.toml
data/interim/: dataset_preliminar.csv
data/raw/: 14_5_08_Evolucion-de-Pasajeros-por-tipo.xlsx  16_1_01_Pernoctaciones_ingresos_estadia_promedio.xlsx  16_1_04_Visitas-al-Parque-Nacional-TDF.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
parque_nacional_tierra_del_fuego_y_el_turismo_en_la_provincia/: __init__.py  dataset.py  features.py  plots.py
parque_nacional_tierra_del_fuego_y_el_turismo_en_la_provincia/modeling/: predict.py  train.py
