[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parque_nacional_tierra_del_fuego_y_el_turismo_en_la_provincia"
version = "0.0.1"
description = "Creacion de un modelo para predecir la afluencia de visitantes al parque nacional en funcion de las proyecciones de turismo en la provincia"
authors = [
  { name = "Adrian Nicora" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["parque_nacional_tierra_del_fuego_y_el_turismo_en_la_provincia"]
force_sort_within_sections = true
